--- a/Titanic_Prediction/Notebooks/01_EDA_cleaning.ipynb
+++ b/Titanic_Prediction/Notebooks/01_EDA_cleaning.ipynb
@@ -1679,7 +1679,7 @@
    "source": [
     "# Summary\n",
     "\n",
-    "##### Overall Survival Rate: Only 38% of passengers survived, underscoring the severity of the disaster and the limited lifeboat capacity.\n",
+    "##### Overall Survival Rate: Only 38% of passengers survived, underscoring the severity of the disaster and the Limited lifeboat capacity.\n",
     "\n",
     "##### Sex and Survival: Women had a dramatically higher survival rate (74%) compared to men (19%), reflecting the “women and children first” evacuation policy.\n",
     "\n",
